--- a/angular.json
+++ b/angular.json
@@ -31,14 +31,8 @@
 						"inlineStyleLanguage": "scss",
 						"assets": [
 							"src/favicon.ico",
-							"src/assets",
-							{
-								"glob": "**/*",
-								"input": "./node_modules/ngx-ds-secret-house/assets",
-								"output": "./assets/"
-							}
+							"src/assets"
 						],
-						"preserveSymlinks": true,
 						"styles": [
 							"src/styles.scss"
 						],
